[gd_scene load_steps=16 format=3 uid="uid://iw3jhcqip82p"]

[ext_resource type="Script" uid="uid://b3n3brbgljr3c" path="res://Scenes/entities/tank/tank.gd" id="1_7f80w"]
[ext_resource type="Texture2D" uid="uid://gk2iv6jdphd2" path="res://Assets/Sprites/tank_body.png" id="1_r30pj"]
[ext_resource type="PackedScene" uid="uid://dxdgw65mokdh8" path="res://Scenes/entities/tank/weapon/weapon.tscn" id="2_7f80w"]
[ext_resource type="AudioStream" uid="uid://bi8sf70g2qlx4" path="res://Assets/SFX/drive_water.wav" id="2_kfnf6"]
[ext_resource type="AudioStream" uid="uid://cowlnf75sc0ml" path="res://Assets/SFX/drive_default.wav" id="4_odx6h"]

[sub_resource type="Gradient" id="Gradient_pr3bd"]
offsets = PackedFloat32Array(0, 0.28, 0.693333)
colors = PackedColorArray(1, 1, 1, 1, 0.388235, 0.607843, 1, 1, 0, 0.25098, 0.67451, 0.815686)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_odx6h"]
gradient = SubResource("Gradient_pr3bd")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_kfnf6"]
particle_flag_align_y = true
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(-16, 1, 1)
direction = Vector3(1, 16, 0)
spread = 25.0
initial_velocity_max = 4.0
gravity = Vector3(0, 0, 0)
damping_max = 3.0
scale_min = 0.25
color_ramp = SubResource("GradientTexture1D_odx6h")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_xrp3h"]
particle_flag_align_y = true
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(-16, 1, 1)
direction = Vector3(1, -16, 0)
spread = 25.0
initial_velocity_max = 4.0
gravity = Vector3(0, 0, 0)
damping_max = 3.0
scale_min = 0.25
color_ramp = SubResource("GradientTexture1D_odx6h")

[sub_resource type="Animation" id="Animation_42q8f"]
resource_name = "Idle"

[sub_resource type="Animation" id="Animation_2nc7w"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_6c1wy"]
resource_name = "idle"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_vjxkb"]
resource_name = "move"
length = 0.2
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_iirto"]
_data = {
&"Idle": SubResource("Animation_42q8f"),
&"RESET": SubResource("Animation_2nc7w"),
&"idle": SubResource("Animation_6c1wy"),
&"move": SubResource("Animation_vjxkb")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_13eyb"]
size = Vector2(27, 26)

[node name="Tank" type="CharacterBody2D" node_paths=PackedStringArray("weapon")]
collision_mask = 4
script = ExtResource("1_7f80w")
weapon = NodePath("Weapon")
drive_water_audio = ExtResource("2_kfnf6")
default_drive_audio = ExtResource("4_odx6h")

[node name="RightTrackParticles" type="GPUParticles2D" parent="."]
position = Vector2(0, 15)
emitting = false
amount = 128
process_material = SubResource("ParticleProcessMaterial_kfnf6")

[node name="LeftTrackParticles" type="GPUParticles2D" parent="."]
position = Vector2(0, -14)
emitting = false
amount = 128
process_material = SubResource("ParticleProcessMaterial_xrp3h")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_iirto")
}

[node name="BodySprite" type="Sprite2D" parent="."]
texture = ExtResource("1_r30pj")
hframes = 2

[node name="Weapon" parent="." instance=ExtResource("2_7f80w")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 0)
shape = SubResource("RectangleShape2D_13eyb")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_odx6h")
volume_db = 1.0
bus = &"SFX"
